Fixed broken CSS at low resolutions.

--- a/museum_site/static/css/mobile.css
+++ b/museum_site/static/css/mobile.css
@@ -1,17 +1,21 @@
 #content
 {
     order:1;
-    width:100%;
+    margin-left:1em;
+    margin-right:1em;
+    flex:0 1 100%;
 }
 
 #sidebar-left
 {
     order:2;
-    width:50%;
+    flex:1;
+    margin-right:0.5em;
 }
 
 #sidebar-right
 {
     order:3;
-    width:50%;
+    flex:1;
+    margin-left:0.5em;
 }
